#pragma once
#include "Product.h"
#include <list>

using namespace std;
class Order
{
	//Product[] products; //Tablica produktów
	list<Product*> products;
};

